# VMGB

./: .gitignore  CMakeLists.txt  README.md  main.cpp
i18n/: VMGB_fr_FR.ts
include/: eventmanager.h  guitarboard.h  guitarstring.h  keynote.h  mainwindow.h  midi.h  mididriver.h  settingswindow.h  settingwindow.h
include/guitar/: board.h  fret.h  string.h
include/midi/: _driver.h  manager.h  midi.h
include/midi/driver/: abstractdriver.h  alsa.h
include/mididriver/: alsamididriver.h  jackmididriver.h
include/setting/: driver.h  guitar.h  guitarsetting.h  midinoteinput.h  setting.h
src/: eventmanager.cpp  guitarboard.cpp  guitarstring.cpp  keynote.cpp  mainwindow.cpp  midi.cpp  mididriver.cpp  settingswindow.cpp  settingwindow.cpp
src/guitar/: board.cpp  fret.cpp  string.cpp
src/midi/: _driver.cpp  manager.cpp
src/midi/driver/: abstractdriver.cpp  alsa.cpp
src/mididriver/: alsamididriver.cpp  jackmididriver.cpp
src/setting/: driver.cpp  guitar.cpp  guitarsetting.cpp  midinoteinput.cpp
ui/: guitar_board.ui  guitar_fret.ui  guitar_string.ui  guitarboard.ui  keynote.ui  mainwindow.ui  setting_driver.ui  setting_guitar.ui  setting_midinoteinput.ui  settingswindow.ui  settingwindow.ui
